# tripsage-ai

./: .coveragerc  .cursorignore  .cursorindexingignore  .env.example  .env.example.firecrawl  .env.local.example  .env.test  .env.test.example  .gitignore  .gitleaks.toml  .npmrc  .pre-commit-config.yaml  .python-version  AGENTS.md  AI-REVIEW-INSTRUCTIONS.md  API_REFERENCE.md  API_SERVICES_REFACTORING_SUMMARY.md  ARCHITECTURE_CLEANUP_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  BJO_211_COVERAGE_GAPS_DETAILED.md  BUILD_RESOLUTION_SUMMARY.md  BYOK_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CI_VALIDATION_FINAL_REPORT.md  CLAUDE.md  CLEANUP_PLAN.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPREHENSIVE-REVIEW-MANIFEST.md  COMPREHENSIVE_ASSESSMENT.md  COMPREHENSIVE_CLEANUP_REPORT.md  COMPREHENSIVE_TEST_COVERAGE_ANALYSIS.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  CONFIGURATION_VALIDATION_SUMMARY.md  CONFIG_CLEANUP.md  CONFIG_TEST_COVERAGE_REPORT.md  CONFIG_TEST_INTEGRATION_GUIDE.md  CONTEXT-OPTIMIZATION-SUMMARY.md  CURRENT_STATUS_SUMMARY.md  DATABASE_SECURITY_MIGRATION_PLAN.md  DATABASE_TRIGGERS_IMPLEMENTATION_SUMMARY.md  (+113 more)
.github/: BRANCH_CONVENTIONS.md  CICD_README.md  CI_ARCHITECTURE.md  CI_FIXES_SUMMARY.md  CI_PIPELINE_DOCUMENTATION.md  CODEOWNERS  DEPLOYMENT.md  README.md  REPOSITORY_SETUP.md  ci-config.yml  dependabot.yml  secret_scanning.yml
@types/: google.maps.d.ts  next-cache-components.d.ts
ARCHIVED_DOCS/: README.md
api/: ARCHITECTURE.md  README.md  deps.py  main.py
debug_tests/: test_debug_flights.py
docker/: Dockerfile.api  Dockerfile.dev  README.md  docker-compose-neo4j.yml  docker-compose.mcp.dedicated.yml  docker-compose.mcp.yml  otel-collector-config.yaml  prometheus.yml
docs/: BEST_SYSTEM_ARCHITECTURE_PLAN.md  ENVIRONMENT_VARIABLES.md  MASTER_ROLE_BASED_RESTRUCTURE.sh  MIGRATION_SUMMARY.md  QUERY_PERFORMANCE_MONITORING.md  README.md  SESSION_PROTOCOL.md  SIMPLIFIED_API_KEY_SERVICE.md  SUMMARY.md  TECH_DEBT.md  TEST_REORGANIZATION_JUSTIFICATION.md  TOOLS.md  WEBSOCKET_INFRASTRUCTURE.md  WEBSOCKET_TECHNICAL_DEBT.md  api-restructure-commands.sh  api-restructure-report.md  architecture-diagrams.md  database_consolidation_plan.md  database_setup.md  fastapi_dependency_injection_modernization.md  gen_ref_pages.py  index.md  lessons-learned-db-optimization.md  maintenance.md  metrics.md  openapi.md  performance.md  pgvector-monitoring-guide.md  rls-implementation-guide.md  rls-security-guide.md  tasks-related.md  tripsage_architecture_research_notes.md  updated-frontend.md  user-docs-migration.sh
docs_backup_20250601_224514/: API_WEBSOCKET_REFERENCE.md  ENVIRONMENT_VARIABLES.md  README.md
e2e/: activities-search.spec.ts  agents-budget-memory.spec.ts  auth-feedback.spec.ts  calendar-integration.spec.ts  critical-flows.spec.ts  csp-nonce.spec.ts  dashboard-functionality.spec.ts  error-boundaries-loading.spec.ts  profile-preferences.spec.ts  register.spec.ts  reset-password.spec.ts
examples/: agent_handoffs_example.py  mcp_client_initialization.py  mcp_config_usage.py  pgvector_optimization_examples.py  webcrawl_config_example.py
frontend/: .env.example  .env.test.example  .eslintrc.json  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc  AGENTS.md  Dockerfile.dev  KNOWLEDGE_PACK.md  MERGE_CHECKLIST.md  README.md  REALTIME_TEST_IMPLEMENTATION_SUMMARY.md  SCHEMA_ADAPTER_TEST_SUMMARY.md  TESTING_SUMMARY.md  TYPESCRIPT_FIX_TRACKER.md  TYPESCRIPT_MIGRATION_STATUS.md  biome.json  components.json  eslint.config.mjs  full-lint-output.txt  lighthouse.config.js  lint-output.txt  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tailwind.config.mjs  test-debug.test.ts  tsconfig.json  vercel.json  vitest.config.ts
mcp_servers/: README.md  claude_desktop_config.json  openai_agents_config.js  openai_agents_integration.py  package.json
migrations/: 20250122_01_add_api_keys_table.sql  20250508_01_initial_schema_core_tables.sql  20250508_02_dependent_tables.sql  20250508_03_complex_relationship_tables.sql  20250508_04_indexes.sql  20250508_06_rollback.sql  20250510_01_add_auth_fields_to_users.sql  20250522_01_add_chat_session_tables.sql  20250522_01_add_chat_session_tables_rollback.sql  20250522_02_add_api_keys_table.sql  20250526_01_enable_pgvector_extensions.sql  20250526_01_enable_pgvector_extensions_rollback.sql  20250527_01_mem0_memory_system.sql  20250609_01_supabase_auth_integration_clean_schema.sql  README.md  mcp_migration_runner.py  neo4j_schema_init.py
prompts/: agent_development_prompt.md  agent_development_prompt.xml
scripts/: PRD_OPTIMIZATION.md  README.md  SCRIPT_ARCHITECTURE.md  USAGE_GUIDE.md  __init__.py  ai-model-smoke.mjs  benchmark-tests.ts  benchmark_enhanced_database_performance.py  check-ai-sdk-version-contract.mjs  check-ai-tools.mjs  check-api-route-errors.mjs  check-boundaries.js  check-boundaries.mjs  check-coverage-critical.mjs  check-doc-links.mjs  check-fileoverviews.mjs  check-no-new-domain-infra-imports.mjs  check-no-new-unknown-casts.mjs  check-no-secrets.mjs  check-no-unknown-casts.mjs  check-otel-convergence.mjs  cl_add.py  deploy_api_key_migration.py  e2e-webserver.mjs  generate_openapi.py  init_database.py  mcp_launcher.py  ops.ts  run_migrations.py  security_validation.py  start_airbnb_mcp.sh  start_calendar_mcp.sh  start_memory_mcp.sh  start_official_time_mcp.sh  start_time_mcp.sh  stop_calendar_mcp.sh  stop_official_time_mcp.sh  stop_time_mcp.sh  test-websocket.js  test_api.py  (+23 more)
src/: instrumentation-client.ts  instrumentation.ts  proxy.ts  test-setup.ts
supabase/: .env.example  README.md  TROUBLESHOOTING.md  config.toml  deploy_database_schema.py  schema.sql  seed.sql  test_database_integration.py  validate_database_schema.py
tasks/: COMPLETED-TODO.md  IMPLEMENTATION_SUMMARY.md  MCP_EXTERNAL_SERVERS_TODO.md  MCP_IMPLEMENTATION_PRIORITY.md  TODO-API.md  TODO-FRONTEND.md  TODO-INTEGRATION.md  TODO-V2.md  agent-handoffs-implementation-plan.md  comprehensive-use-cases-and-system-capabilities.md  tasks.json.example
tests/: .env.test  .env.test.example  FIXTURES.md  OPTIMIZATION_PLAN.md  (+17 more)
(+5182 files in other folders)
