[project]
name = "tripsage-ai"
version = "0.2.0"
description = "AI-powered travel planning system with multi-source data integration"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "TripSage Team" }]
dependencies = [
    # Core web framework and async support
    "fastapi>=0.119.0,<0.120.0",
    "uvicorn>=0.38.0,<0.39.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "starlette>=0.48.0,<0.49.0",
    # Authentication and security (Supabase SDK handles token validation)
    "passlib[bcrypt]>=1.7.4", # For password hashing
    "cryptography>=46.0.3",
    "aiohttp>=3.13.1",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    # Data validation and configuration
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "typing-extensions>=4.15.0",
    # Database and caching
    "sqlalchemy[asyncio]>=2.0.44,<2.1.0",
    "redis>=6.4.0,<7.0.0",
    "aiofiles>=25.1.0,<26.0.0",
    "asyncpg>=0.30.0",
    "watchdog>=6.0.0",
    "supabase>=2.22.0,<3.0.0",
    # AI and LLM ecosystem
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "openai>=2.5.0,<3.0.0",
    "anthropic>=0.70.0,<1.0.0",
    "openai-agents>=0.4.0,<0.5.0",
    "mem0ai>=0.1.118,<2.0.0",
    "tenacity>=9.1.2",
    "slowapi>=0.1.9",
    "aiolimiter>=1.1.0",
    "cashews>=7.4.0,<8.0.0",
    "limits[redis]>=5.6.0",
    # Web scraping and automation
    "crawl4ai>=0.7.4,<0.8.0",
    "playwright>=1.55.0,<1.56.0",
    # External API integrations
    "google-api-python-client>=2.185.0,<3.0.0",
    "google-auth>=2.15.0,<2.44.0",
    "google-auth-oauthlib>=1.2.3",
    "googlemaps>=4.10.0",
    "duffel-api>=0.6.2",
    "email-validator>=2.3.0,<3.0.0",
    # Observability and monitoring
    "opentelemetry-api>=1.38.0,<1.39.0",
    "opentelemetry-sdk>=1.38.0,<1.39.0",
    "opentelemetry-exporter-otlp>=1.38.0,<1.39.0",
    "psutil>=7.1.1,<8.0.0",
    "upstash-redis>=1.4.0",
]

[dependency-groups]
observability = [
    "opentelemetry-instrumentation-asgi>=0.59b0,<0.60",
    "opentelemetry-instrumentation-fastapi>=0.59b0,<0.60",
    "opentelemetry-instrumentation-httpx>=0.59b0,<0.60",
    "opentelemetry-instrumentation-redis>=0.59b0,<0.60",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

test = [
    # Core testing framework
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    # Testing utilities and mocking
    "pytest-benchmark>=5.2.0",
    "pytest-httpx>=0.35.0",
    "fakeredis>=2.32.0",
    "polyfactory>=2.16.0",
    "nest-asyncio>=1.6.0",
    "hypothesis>=6.145.0",
    "python-dotenv>=1.2.0",
    # Performance and load testing
    "locust>=2.42.0",
    # Coverage reporting
    "coverage[toml]>=7.11.0",
]

lint = [
    # Code formatting and linting
    "ruff>=0.14.3",
    "mypy>=1.18.2",
    "pyright>=1.1.0",
]

dev = [
    # Include test and lint groups
    {include-group = "test"},
    {include-group = "lint"},
    # Additional development tools
    "radon>=6.0.1",
    "python-jose[cryptography]>=3.5.0",
    "bandit>=1.8.6",
    "rich>=14.2.0",
    "numpy>=2.3.4",
    "uvloop>=0.22.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["tripsage", "tripsage_core", "tripsage.*", "tripsage_core.*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=tripsage",
    "--cov=tripsage_core",
    "--cov-report=term-missing",
    "--cov-report=html:coverage/html",
    "--cov-report=xml:coverage/coverage.xml",
    "--cov-fail-under=90",
    "--cov-branch",
    "--no-cov-on-fail",
    "--timeout=60",
    "-ra"
]

minversion = "6.0"

filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*httpx.*:DeprecationWarning",
    "ignore:.*pydantic.*:DeprecationWarning",
]

markers = [
    "unit: Unit tests for individual components",
    "integration: Service and API integration tests",
    "e2e: End-to-end API flows",
    "performance: Performance and load smoke tests",
    "security: Security-critical validation tests",
    "docker: Docker configuration tests",
    "perf: Performance guard tests",
    "timeout: Tests asserting execution time thresholds",
    "slow: Tests exceeding default runtime expectations",
    "benchmark: performance benchmarks",
]

[tool.ruff]
line-length = 88
target-version = "py313"
include = ["*.py", "*.pyi"]
src = ["tripsage", "tripsage_core", "scripts", "tests"]
extend-exclude = [".github", "**/*.md", "**/*.yml", "**/*.yaml"]

[tool.ruff.lint]
select = [
    # Documentation and style
    "D",   # pydocstyle - docstring formatting
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    # Code quality and bug detection
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "RUF",  # Ruff-specific
    # Best practices and modernization
    "PTH",  # flake8-use-pathlib
    "PIE",  # flake8-pie
    "ERA",  # eradicate (commented code)
    "PD",   # pandas-vet
    "NPY",  # NumPy
    "PERF", # perflint
    "FURB", # refurb
    # Additional strictness
    "A",    # flake8-builtins
    "BLE",  # flake8-blind-except
    "COM",  # flake8-commas
    "FBT",  # flake8-boolean-trap
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "Q",    # flake8-quotes
    "SLF",  # flake8-self (private access)
    # Logging and debugging
    "LOG",  # flake8-logging-format
    "T10",  # flake8-debugger
    # Exception handling
    "TRY",  # tryceratops
    # pylint
    "PL",
]

ignore = [
    # Tests and CLI leniencies
    "S101",  # asserts in tests
    "S108",  # insecure temp files (tests)
    "S311",  # non-crypto randomness (tests)
    # Formatter/semantics conflicts
    "COM812", "COM819",
    # Exception flow style
    "TRY003", "TRY301", "TRY300",
    # Control-flow preferences
    "RET505",
    # Common project-level complexities
    "PLR0912", "PLR0913", "PLR0915",
    # Private member access sometimes required
    "SLF001",
    # Typing-only import rules
    "TC001", "TC002", "TC003",
    # Simplification rules that can reduce clarity
    "SIM300",
    # Collection call preferences
    "C408",
    # Boolean positional arguments
    "FBT001", "FBT002", "FBT003",
    "ERA001",
    "TRY002",
    "E402",  # Import not at top of file
    # pylint
    "PLR2004", "PLR0911", "PLC0415", "PLW0603"
]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",   # allow asserts
    "ARG001", # allow unused args in fixtures/mocks
    "F821",   # undefined names in mocking contexts
]
"scripts/cli/**/*" = ["T20"]
"tripsage/api/routers/*.py" = ["B008"]  # Allow Depends() in FastAPI routers
"tripsage/api/core/*.py" = ["B008"]     # Allow Depends() in FastAPI dependencies
"tripsage_core/services/business/auth_service.py" = ["B008"]
"tests/conftest.py" = ["E402"]          # Allow imports-after-exec for env setup
"scripts/**/*" = []
"tripsage_core/types/**" = ["A005"]      # Package name overlaps stdlib 'types'

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = true
known-first-party = ["tripsage", "tripsage_core", "scripts", "tests"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-after-imports = 2

# (merged per-file-ignores above)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["tripsage", "tripsage_core"]
exclude = [
    "build",
    "dist",
    "docs",
    "site",
    "frontend",
    "node_modules",
    ".next",
    "out",
    "dist",
    "build",
    "coverage",
    "htmlcov",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    "frontend/node_modules",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
stubPath = "typings"
reportMissingTypeStubs = false
reportMissingImports = "warning"

[tool.uv]
managed = true
package = true
compile-bytecode = true
link-mode = "copy"
default-groups = ["dev"]
preview = true
override-dependencies = ["fastuuid==0.14.0"]

[tool.pylint]
[tool.pylint.main]
extension-pkg-allow-list = ["pydantic"]
reports = false
score = true
recursive = true
py-version = "3.13"

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "invalid-name",
    "protected-access",
    "broad-except",
    "unused-argument",
    "redefined-outer-name",
    "pointless-string-statement",
    "line-too-long",
    "unnecessary-ellipsis",
    "import-outside-toplevel",
    "import-error",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "consider-using-dict-items",
    "fixme",
    "duplicate-code",
]

[tool.pylint."tests/**/*"]
disable = ["wrong-import-position"]

[tool.coverage.run]
branch = true
source = ["tripsage", "tripsage_core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/config.py",
    "*/test_*.py",
    "**/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "# nocov",
    "pass"
]
show_missing = true
precision = 2
fail_under = 90

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.bandit]
# Exclude false positive security warnings
exclude_dirs = ["tests"]
skips = [
    "B104",  # Hardcoded bind all interfaces (development server)
    "B608",  # SQL injection in string formatting (false positives in error messages)
]

[tool.hatch.build.targets.wheel]
packages = ["tripsage", "tripsage_core"]
